data/all_generated_tests/raw_wast_tests/loop_EdgeCaseFailuresinbr_table_1070.wast
;; 1. **Empty `br_table` with No Targets**:    - **Description**: Test a `br_table` instruction inside a loop with an empty table and an index operand. This checks if the implementation properly handles a `br_table` with no targets, ensuring it defaults correctly.    - **Constraint**: Ensures proper handling of an empty branch table, testing if both implementations can handle looping with no targets gracefully.

(assert_invalid
  (module (func $empty_br_table_no_targets
    (loop (result i32)
      (i32.const 0)
      (br_table)
      (i32.const 1)
    )
  ))
  "type mismatch"
)